--- a/pinax/projects/blog_project/templates/blog/post_detail.html
+++ b/pinax/projects/blog_project/templates/blog/post_detail.html
@@ -4,8 +4,8 @@
 {% block title %}{{ object.title }} | {{ block.super }}{% endblock %}
 
 {% block meta %}
-<meta name="keywords" content="{{ object.get_meta_keywords }}">
-<meta name="description" content="{{ object.get_meta_description }}">
+<meta name="keywords" content="{{ object.get_meta_keywords }}" />
+<meta name="description" content="{{ object.get_meta_description }}" />
 <meta name="author" content="{{ post.author.full_name }}" />
 {% endblock %}
 
@@ -51,7 +51,7 @@
 
   <div class="subscribe clearfix">
     <ul>
-      <li><a href="http://twitter.com/?status=reading: {{ object.title }} - {{ SITE_URL }}{{ object.get_absolute_url }}" target="_blank">{% trans "Twitter this" %}</a></li>
+      <li><a href="http://twitter.com/?status=reading: {{ object.title }} - {{ SITE_URL }}{{ object.get_absolute_url }}">{% trans "Twitter this" %}</a></li>
       <li><a href="http://www.reddit.com/r/programming/submit">{% trans "Reddit this" %}</a></li>
       <li><a href="http://delicious.com/save" onclick="window.open('http://delicious.com/save?v=5&amp;noui&amp;jump=close&amp;url='+encodeURIComponent(location.href)+'&amp;title='+encodeURIComponent(document.title), 'delicious','toolbar=no,width=550,height=550'); return false;">{% trans "Add to Delicious" %}</a></li>
       <li><a href="{{ FEED_SUBSCRIBE_RSS }}">{% trans "Subscribe RSS" %}</a></li>
