--- a/pinax/projects/blog_project/templates/contact_form/contact_form.html
+++ b/pinax/projects/blog_project/templates/contact_form/contact_form.html
@@ -7,37 +7,10 @@
 
 <p>{% trans "Get in touch." %}</p>
 
-<form method="POST" action=".">
-
-  {% if form.errors %}
-  <div id="form-error">
-    <p>{% trans "Woops, looks like you forgot some information." %}</p>
-    <ul>
-    {% for field in form %}
-    {% if field.errors %}<li>{{ field.label }} - {{ field.errors|striptags }}</li>{% endif %}
-    {% endfor %}
-    </ul>
-  </div>
-  {% endif %}
-
-<p>
-<label for="form.name.label">{{ form.name.label }}</label>
-{{ form.name }}
-</p>
-
-<p>
-<label for="form.email.label">{{ form.email.label }}</label>
-{{ form.email }}
-</p>
-
-<p>
-<label for="form.body.label">{{ form.body.label }}</label>
-{{ form.body }}
-</p>
-
+<form method="post" action=".">
+{{ form.as_p }}
 {% render_honeypot_field %}
-
-<input type="submit" name="submit">
+    <input type="submit" name="submit">
 </form>
 
 {% endblock %}
