--- a/pinax/projects/blog_project/templates/quotes/includes/quote.html
+++ b/pinax/projects/blog_project/templates/quotes/includes/quote.html
@@ -2,7 +2,7 @@
     <h3><a href="{{ object.get_absolute_url }}">{{ object.title }}</a></h3>
     <div>
         {% if object.quote %}
-            <blockquote>{{ object.quote }}</blockquote>
+        <blockquote><p>{{ object.quote }}</p></blockquote>
         {% endif %}
     </div>
     <div>
