--- a/pinax/projects/blog_project/templates/quotes/quote_detail.html
+++ b/pinax/projects/blog_project/templates/quotes/quote_detail.html
@@ -3,26 +3,23 @@
 
 {% block content %}
 
-<p>{% trans "Quick fact, my favorite food is" %} {{ favorite_food }}.</p>
-
 <h2>{{ object.title }}</h2>
 
 {% cache 180 "quote.quote_detail" object.pk %}
-<div>
-    <div>
-        {% if object.quote %}
-            <blockquote>{{ object.quote }}</blockquote>
+<div class="quoteme-quote">
+    {% if object.quote %}
+    <blockquote{% if object.url_source %} cite="{{ object.url_source }}"{% endif %}>
+        <p>{{ object.quote }}</p>
+    </blockquote>
+    {% endif %}
+    <div class="attribution">
+    {% if object.author %}
+        {% if object.url_source %}
+        <span>- <a href="{{ object.url_source }}">{{ object.author }}</a></span>
+        {% else %}
+        <span>- {{ object.author }} {% if object.circa %}, {{ object.circa }}{% endif %}</span>
         {% endif %}
-    </div>
-    <div>
-        {% if object.author %}
-      {% if object.url_source %}
-            <span>- <a href="{{ object.url_source }}">{{ object.author }}</a></span>
-      {% else %}
-      <span>- {{ object.author }} {% if object.circa %}, {{ object.circa }}{% endif %}</span>
-      {% endif %}
-
-       {% endif %}
+    {% endif %}
     </div>
 </div>
 {% endcache %}
