--- a/pinax/projects/blog_project/templates/base.html
+++ b/pinax/projects/blog_project/templates/base.html
@@ -37,7 +37,7 @@
     <div id="bleeder"></div>
 
     <div id="body-container" class="clearfix">
-        {% block body %}
+    {% block body %}
     {% block content_title %}<h1 class="hide">{{ BLOG_SETTINGS.site_name }}</h1>{% endblock %}
 
     <div id="header" class="clearfix">
@@ -61,7 +61,7 @@
     <div class="container_16">
         <div class="grid_9 suffix_1">
             <div class="content">
-                        {% block content %}{% endblock %}
+            {% block content %}{% endblock %}
             </div>
             <!-- /content -->
 
@@ -112,11 +112,11 @@
 
             {% cache 3600 "base.blogroll" %}
             {% get_blogroll 10 as blogroll %}
-            <h4>{% trans "BlogRoll" %}</h4>
+            <h4>{% trans "Blog roll" %}</h4>
             <ul class="recent-posts">
-            {% for item in blogroll %}
-            <li><a href="{{ item.get_absolute_url }}">{{ item.name }}</a></li>
-            {% endfor %}
+                {% for item in blogroll %}
+                <li><a href="{{ item.get_absolute_url }}">{{ item.name }}</a></li>
+                {% endfor %}
             </ul>
             {% endcache %}
 
@@ -156,7 +156,7 @@
     {% endwith %}
     {% endcache %}
 
-    <!-- google analtyics -->
+    <!-- Google Analytics -->
     {% cache 7200 "base.analytics" %}
     {% analytics %}
     {% endcache %}
