Hanging punctuation for lists in post bodies.

--- a/pinax/projects/blog_project/site_media/static/css/base.css
+++ b/pinax/projects/blog_project/site_media/static/css/base.css
@@ -115,9 +115,19 @@ body {
 ul.recent-posts li, .post li
 {
     list-style: disc;
-    left-margin: 1.2em;
     list-style-position: inside;
     color: #333940;
+}
+
+.post .body ol,
+.post .body ul {
+    margin-left: 0;
+}
+
+.post .body li {
+    color: inherit;
+    list-style-position: outside;
+    margin-left: 0;
 }
 
 .bookmark p{ margin-top: .8em;}
